tdf#158388 Allow user to open ODS file with corrupted meta.xml & settings.xml

1. Follow sd/sw module to give corrupted meta.xml and settings.xml only
warnings instead of blocking user to open.

2. only set rError after all the if's and Removing the unnecessary bRet assignment

Change-Id: I6dd6acd919d1fbec91ef4a0d0e78623f0c65dc40
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160605
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>